--- a/meta.yaml
+++ b/meta.yaml
@@ -1,5 +1,5 @@
-name: Mailto
 version: "1.0.3"
+name: MailtoLink
 description: Create mailto links with ease
 url: https://github.com/marsvogel/statamic-mailto
 developer: Christopher Bischoff
